Update to: generator-koa-theme v0.12.1

--- a/koapp-theme-dark-side.html
+++ b/koapp-theme-dark-side.html
@@ -1,4 +1,4 @@
-<!-- Generated with generator-koa-theme v0.9.4 -->
+<!-- Generated with generator-koa-theme v0.12.1 -->
 
 <link rel="import" href="elements/dark-side-badge/dark-side-badge.html">
 <link rel="import" href="elements/dark-side-button/dark-side-button.html">
@@ -11,6 +11,7 @@
 <link rel="import" href="elements/dark-side-input/dark-side-input.html">
 <link rel="import" href="elements/dark-side-input/dark-side-textarea.html">
 <link rel="import" href="elements/dark-side-item/dark-side-item.html">
+<link rel="import" href="elements/dark-side-item/dark-side-item-body.html">
 <link rel="import" href="elements/dark-side-menu/dark-side-menu.html">
 <link rel="import" href="elements/dark-side-menu-button/dark-side-menu-button.html">
 <link rel="import" href="elements/dark-side-progress/dark-side-progress.html">
