line-height and body background tweak.

--- a/styles/default-theme.html
+++ b/styles/default-theme.html
@@ -27,4 +27,8 @@
     --primary-font-family: 'Open Sans';
     --title-font-family: 'Oswald';
   }
+  
+  body {
+    background-color: var(--primary-color);
+  }
 </style>
